--- a/Obi/Obi/messages.resx
+++ b/Obi/Obi/messages.resx
@@ -939,7 +939,7 @@ Error text: {1}</value>
     <comment>ToString() text selection</comment>
   </data>
   <data name="obi_url" xml:space="preserve">
-    <value>http://daisy-trac.cvsdude.com/obi</value>
+    <value>http://www.daisy.org/projects/obi/</value>
     <comment>Obi URL (may point to localized page.)</comment>
   </data>
   <data name="max_phrase_duration_invalid_input" xml:space="preserve">
@@ -1332,5 +1332,8 @@ Error text: {1}</value>
   </data>
   <data name="Selected_RecordingPhrase" xml:space="preserve">
     <value>:Recording Phrase</value>
+  </data>
+  <data name="Obi_Wiki_Url" xml:space="preserve">
+    <value>http://daisy-trac.cvsdude.com/obi</value>
   </data>
 </root>
